Fix geigery footer resizing on mobile

--- a/style-m.css
+++ b/style-m.css
@@ -287,6 +287,10 @@
     .destovka-cart-error p {
         font-size: 16px;
     }
+
+    .destovka-product-geigery-card-footer > div {
+        flex: 1;
+    }
   }
 
 
